# tenoch

./: .clangd  .do.swp  .gitignore  CMakeLists.txt  README.md  all.sh  build.sh  clean.sh  configure.sh  do  do.py  dumpStyle.sh  format.sh  push.sh  run.sh  tree.sh  update.sh
.cache/clangd/index/: main.c.17499074EEB81D99.idx
bash/actions/: all.bash  build.bash  clean.bash  configure.bash  format.bash  push.bash  run.bash  style.bash  tree.bash  update.bash
bash/globals/: binDir.bash  outDir.bash
bash/modules/: error.bash  try.bash
bash/parameters/: all.bash
gtg/: CMakeLists.txt
gtg/glsl/: simple.vert
gtg/src/: main.cc
toolchain/: windows.cmake
