cmake_minimum_required(VERSION 3.10)
project(tenoch)
set(CMAKE_CXX_STANDARD 26)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)
add_compile_options(-Werror -Wfatal-errors -Wpedantic -Wall -Wextra)
find_package(PkgConfig)
pkg_check_modules(SDL3 REQUIRED IMPORTED_TARGET sdl3)
add_subdirectory(gtg)
