set(BINARY_DIR ${CMAKE_BINARY_DIR}/bin/gtg)
file(GLOB_RECURSE HEADERS inc/*.h)
file(GLOB_RECURSE SOURCES src/*.cc)
add_executable(gtg ${HEADERS} ${SOURCES})
set_target_properties(gtg PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR})
file(COPY res DESTINATION ${BINARY_DIR})
target_link_libraries(gtg PkgConfig::SDL3)
